Bug 492829 - Misplaced fingerprint table.
Summary: Misplaced fingerprint table.
Status: RESOLVED FIXED
Alias: None
Product: kleopatra
Classification: Applications
Component: general (other bugs)
Version First Reported In: 3.2.0.240800
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Andre Heinecke
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2024-09-08 18:28 UTC by Leo C.
Modified: 2024-10-14 21:25 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
This is the image point misplaced table. (89.12 KB, image/png)
2024-09-08 18:28 UTC, Leo C.
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Leo C. 2024-09-08 18:28:26 UTC
Created attachment 173449 [details]
This is the image point misplaced table.

SUMMARY
A table has misplaced on username section.

STEPS TO REPRODUCE
1. Open Kleopatra
2. Click an username
3. 

OBSERVED RESULT
Misplaced fingerprint,name,email table, cover up GPG key name. I can't move or resize table. It's a feature or bug?

EXPECTED RESULT
I want it placed correctly.
I'm really sorry if it's duplicate.
Thank you.


SOFTWARE/OS VERSIONS
Operating System: Fedora Linux 40
KDE Plasma Version: 6.1.4
KDE Frameworks Version: 6.5.0
Qt Version: 6.7.2
Kernel Version: 6.10.7-200.fc40.x86_64 (64-bit)
Graphics Platform: Wayland
Processors: 12 × AMD Ryzen 5 5500U with Radeon Graphics
Memory: 6.6 GiB of RAM
Graphics Processor: AMD Radeon Graphics

ADDITIONAL INFORMATION
None.
Comment 1 Ingo Klöcker 2024-10-14 21:10:50 UTC
Confirmed with version 3.2.0.240802 on Tumbleweed. The problem is not present in the latest development version.
Comment 2 Ingo Klöcker 2024-10-14 21:25:27 UTC
Git commit 7502abdb0ff5c7190a41de3be4decf90be614fc1 by Ingo Klöcker, on behalf of Tobias Fella.
Committed on 14/10/2024 at 21:21.
Pushed by kloecker into branch 'release/24.08'.

Do not create RevokersWidget when gpgme is too old

otherwise, the widget is still shown at a nonsensical position in the dialog

(cherry picked from commit 2735dd5ce24ba02a15b52ec3f695bf4b86dfd309)

M  +2    -2    src/dialogs/certificatedetailswidget.cpp

https://invent.kde.org/pim/kleopatra/-/commit/7502abdb0ff5c7190a41de3be4decf90be614fc1