Do not create RevokersWidget when gpgme is too old

otherwise, the widget is still shown at a nonsensical position in the dialog

(cherry picked from commit 2735dd5ce24ba02a15b52ec3f695bf4b86dfd309)
BUG: 492829